megre to evebox v0.3.2 also add org_members this removed the ability to delete your profile if you are a member of the company
